[metadata]
name = pas-http-client
description = Python Application Services: HTTP client
long_description = "pas-http-client" provides a simple HTTP client encapsulating Python's native one.
platforms = any
author = direct Netware Group et al.
author_email = web@direct-netware.de
license = MPL2
url = https://www.direct-netware.de/redirect?pas;http;client
classifiers =
    Framework :: direct PAS
    Intended Audience :: Developers
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules
